# pymeteobridgesql

./: .gitignore  CHANGELOG.md  README.md  async_test.py  pymeteobridgesql.code-workspace  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  package_helper
.github/workflows/: publish.yml
meteobridge/: service_commands.txt
php/: forecast_visualcrossing.php  forecast_visualvrossing.php  meteobridge.php  pollen_dk.php  test.php
pymeteobridgesql/: __init__.py  api.py  aqi_calculator.py  const.py  data.py
scripts/: lint
sql/: create_database.sql
