[project]
name = "pymeteobridgesql"
version = "1.5.0"
description = "Gets weather data from a MySQL table"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Bjarne Riis", email = "bjarne@br-service.dk"}]
requires-python = ">=3.12"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "A", "N", "UP", "Q", "RUF"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"async_test.py" = ["T20", "ERA"]
